src/components/FeedHeader/components/SelectFilter/SelectFilter.scss
@import '../../../../../styles/mixins.scss';
@import '../../../../../styles/variables.scss';

$block: '.#{$namespace}feed-filter';

#{$block} {
    $selectorItemBorderRadius: 8px;
    $selectorContainerBorderRadius: 12px;
    $popupMaxHeight: 500px;

    &__select {
        width: 100%;
    }

    &__select:hover {
        width: 100%;
    }

    &__popup {
        @include add-specificity(&) {
            max-height: $popupMaxHeight;
            border-radius: $selectorContainerBorderRadius;

            .g-select-list {
                &::-webkit-scrollbar {
                    display: none;
                }

                .g-list {
                    max-height: calc(
                        $popupMaxHeight - var(--g-text-body-3-line-height) - $indentXXS
                    );
                }
            }

            .g-list__item {
                margin: $indent4XS;
                border-radius: $selectorItemBorderRadius;
            }
        }

        &_isMobile {
            #{$block}__popup-filter {
                position: relative;
                border: none;

                &::before {
                    content: '';
                    position: absolute;
                    left: 50%;
                    bottom: 0px;
                    border-bottom: 2px solid var(--g-color-line-generic);
                    border-bottom-right-radius: 0;
                    border-bottom-left-radius: 0;
                    width: 100%;
                    height: 2px;
                    transform: translateX(-50%);
                }
            }
        }
    }

    &__popup-filter {
        @include text-size(body-2);
        padding: $indent4XS $indentXXS;

        border: none;

        border-bottom: 1px solid var(--g-color-line-generic);
        border-bottom-right-radius: 0;
        border-bottom-left-radius: 0;
    }
}

